# vercel

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  downloader.sh  pyproject.toml
.github/workflows/: prs.yml  release.yml
adr/: normalize_ids.md  specify_api_version_for_every_operation.md
docs/: guide.md  supported-resources.md
docs/reference/: authentication.md  exceptions.md  pagination.md
docs/reference/resources/: dns.md  domains.md  projects.md  user.md
tests/: pagination.py  pagination_test.py  resource_test.py
tests/fixtures/responses/aliases/v2/: get.json
tests/fixtures/responses/aliases/v3/: list_1.json  list_2.json  list_3.json
tests/fixtures/responses/certificates/v3/: get.json
tests/fixtures/responses/deployments/v11/: get.json
tests/fixtures/responses/deployments/v12/: cancel.json
tests/fixtures/responses/deployments/v2/: list_1.json
tests/fixtures/responses/dns/v4/: list_1.json  list_2.json  list_3.json
tests/fixtures/responses/domains/v4/: check_availability.json  (+3 more)
tests/fixtures/responses/user/: get.json
tests/helpers/: response.py
tests/resources/: aliases_test.py  certificates_test.py  deployment_test.py  dns_test.py  domain_test.py  domains_test.py  project_test.py  projects_test.py  secrets_test.py  teams_test.py  user.py  user_test.py
vercel/: __init__.py  exceptions.py  request.py
vercel/resources/: __init__.py  aliases.py  base.py  certificates.py  deployments.py  dns.py  domains.py  logs.py  projects.py  secrets.py  teams.py  user.py
vercel/resources/base/: __init__.py  createable_resource.py  resource.py
(+27 files in other folders)
