[tool.poetry]
name = "vercel"
version = "0.1.1"
description = "Vercel SDK"
authors = ["Joe Snell <joepsnell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
