[tool.poetry]
name = "vercel"
version = "0.2.1"
description = "Vercel SDK"
authors = ["Joe Snell <joepsnell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-cov = "^2.10.0"
pytest-xdist = "^1.34.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
